fixed some spacing issues in movieinfo

--- a/FrontEnd/src/pages/MovieInfo.css
+++ b/FrontEnd/src/pages/MovieInfo.css
@@ -1,7 +1,7 @@
 .movieinfo-container{
     font-family: "Jost", sans-serif;
     margin: auto;
-    height: 100%;
+    height: 90vh;
     padding-top: 3em;
 }
 
